--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,11 @@
   ],
   "dependencies": {
     "angular-material": "~0.8.3",
-    "angular": "~1.3.14"
+    "angular": "~1.3.14",
+    "angular-animate": "~1.3.14",
+    "jquery": "~2.1.3",
+    "ngFx": "~1.0.6",
+    "csshake": "*",
+    "angular-moment": "~0.9.0"
   }
 }
