--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
     "jquery": "~2.1.3",
     "ngFx": "~1.0.6",
     "csshake": "*",
-    "angular-moment": "~0.9.0"
+    "angular-moment": "~0.9.0",
+    "moment-timezone": "~0.3.0"
   }
 }
