--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,8 @@
     "ngFx": "~1.0.6",
     "csshake": "*",
     "angular-moment": "~0.9.0",
-    "moment-timezone": "~0.3.0"
+    "moment-timezone": "~0.3.0",
+    "angular-route": "~1.3.14",
+    "angular-loading-bar": "~0.7.1"
   }
 }
