--- a/bower.json
+++ b/bower.json
@@ -29,6 +29,8 @@
     "angular-moment": "~0.9.0",
     "moment-timezone": "~0.3.0",
     "angular-route": "~1.3.14",
-    "angular-loading-bar": "~0.7.1"
+    "angular-loading-bar": "~0.7.1",
+    "angular-ui-router": "~0.2.13",
+    "angular-highlightjs": "~0.4.1"
   }
 }
