--- a/bower.json
+++ b/bower.json
@@ -31,6 +31,7 @@
     "angular-route": "~1.3.14",
     "angular-loading-bar": "~0.7.1",
     "angular-ui-router": "~0.2.13",
-    "angular-highlightjs": "~0.4.1"
+    "angular-highlightjs": "~0.4.1",
+    "angular-diff-match-patch": "~0.1.7"
   }
 }
