--- a/bower.json
+++ b/bower.json
@@ -32,6 +32,7 @@
     "angular-loading-bar": "~0.7.1",
     "angular-ui-router": "~0.2.13",
     "angular-highlightjs": "~0.4.1",
-    "angular-diff-match-patch": "~0.1.7"
+    "angular-diff-match-patch": "~0.1.7",
+    "angular-socket-io": "~0.7.0"
   }
 }
