--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "just pushin through",
   "dependencies": {
     "amqp": "^0.2.4",
+    "js-yaml": "^3.2.7",
     "pubsub-js": "^1.5.2",
     "socket.io": "^1.3.5"
   }
