--- a/bower.json
+++ b/bower.json
@@ -33,6 +33,7 @@
     "angular-ui-router": "~0.2.13",
     "angular-highlightjs": "~0.4.1",
     "angular-diff-match-patch": "~0.1.7",
-    "angular-socket-io": "~0.7.0"
+    "angular-socket-io": "~0.7.0",
+    "jsdiff": "~1.3.1"
   }
 }
